examples/quarkus-mtls-example/quarkus-client-mtls/src/main/jkube/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: client
spec:
  selector:
    app: client
  ports:
    - protocol: TCP
      port: 8443
      targetPort: 8443
