examples/quarkus-mtls-example/quarkus-client-mtls/src/main/jkube/Route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: client
spec:
  tls:
    termination: passthrough
  to:
    kind: Service
    name: client
    weight: 100
  port:
    targetPort: 8443
  wildcardPolicy: None
